# btu_scheduler_daemon

./: .gitignore  .py_sched.toml  BUILDING.md  Cargo.toml  DEPENDENCIES.md  DESIGN.md  DEV.md  Date Time Challenges  LICENSE.txt  PACKAGING.md  README.md  WHY.md  btu_scheduler.code-workspace  btu_scheduler.toml.example  build_as_root.sh  build_musl.sh  build_musl_release.sh  cli.sh  daemon.sh  debug_daemon.sh  py_sched.code-workspace  run_daemon.sh  run_daemon_release.sh
.fleet/: run.json
.github/workflows/: build_all_linux.yml  workflow_build_manual.yml
btu_cli/: Cargo.toml  README.md
btu_cli/src/: main.rs
btu_daemon/: Cargo.toml
btu_daemon/src/: common.rs  daemon.rs  ipc_stream.rs  logging.rs
btu_daemon/tests/: hello_socket.py
btu_scheduler/: Cargo.toml
btu_scheduler/src/: btu_cron.rs  config.rs  email.rs  errors.rs  lib.rs  logging.rs  rq.rs  scheduler.rs  tests.rs
docs/: _config.yml  building_binaries.md  dependency_overview.md  design.md  index.md  why_the_btu.md  why_the_btu.md.backup
python_tests/: create_simple_job.py  install.sh
src/: btu_cron.rs  cli.rs  config.rs  daemon.rs  lib.rs  main.rs  tests.rs
tests/: .flake8  .pylint  hello_socket.py
