[package]
name = "pyrq_scheduler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0.5"
chrono = "0.4"
chrono-tz = "0.6.0"
cron = "0.9.0"
mysql = "21.0.2"
once_cell = "1.8.0"
redis = "0.21.4"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5"
