[package]
name = "pyrq_scheduler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "btu-daemon"

[[bin]]
name = "btu-cli"
path = "src/cli.rs"

[[bin]]
name = "btu-daemon"
path = "src/daemon.rs"

[dependencies]
camino = "1.0.5"
chrono = "0.4"
chrono-tz = "0.6.0"
clap = "2.33.3"
cron = "0.9.0"
mysql = "21.0.2"
once_cell = "1.8.0"
redis = "0.21.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
serde-pickle = "1.1.0"
thiserror = "1.0.30"
toml = "0.5"
ureq = { version = "2.3.1", features = ["json"] }
