#
# This is a Workspace.  It contains 3 crates.
# 
# 1. 'btu_scheduler' is the library crate.
# 2. 'btu_cli' is a Command Line Interface binary.
# 3. 'btu_daemon' is a binary that runs in the background as a daemon.

[workspace]
resolver = "2"
members = [
    "btu_scheduler",
    "btu_cli",
    "btu_daemon",
]
