[package]
name = "btu_cli"
version = "0.1.0"
authors = ["Brian Pond <brian@datahenge.com"]
license = "MIT OR Apache-2.0"
description = "CLI application for the BTU Scheduler."
readme = "README.md"
edition = "2018"

[[bin]]
name = "btu"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
clap = "2.27"
dotenv = "0.15"
heck = "0.3.1"
serde = { version = "1.0.0", features = ["derive"] }
toml = "0.5"
url = { version = "2.1.0", optional = true }
libsqlite3-sys = { version = ">=0.8.0, <0.24.0", optional = true, features = ["min_sqlite_version_3_7_16"] }
diffy = "0.2.0"
regex = "1.0.6"
serde_json = "1.0.72"
serde_regex = "1.1"
ureq = { version = "2.3.1", features = ["json"] }


[dependencies.btu_scheduler]
version = "~0.1.0"
path = "../btu_scheduler"
