[package]
name = "btu_cli"
version = "0.2.0"
authors = ["Brian Pond <brian@datahenge.com"]
license = "MIT OR Apache-2.0"
description = "CLI application for the BTU Scheduler."
readme = "README.md"
edition = "2018"

[[bin]]
name = "btu"
path = "src/main.rs"

[dependencies]
clap = "2.27"
serde_json = "1.0.72"
ureq = { version = "2.3.1", features = ["json"] }

[dependencies.btu_scheduler]
version = "~0.1.0"
path = "../btu_scheduler"
