
[package]
name = "btu_daemon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "btu-daemon"

[[bin]]
name = "btu-daemon"
path = "src/daemon.rs"

[dependencies]
camino = "1.0.5"
chrono = "0.4"
mysql = "21.0.2"
once_cell = "1.8.0"

[dependencies.btu_scheduler]
version = "~0.1.0"
path = "../btu_scheduler"
