
[package]
name = "btu_daemon"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "btu-daemon"

[[bin]]
name = "btu-daemon"
path = "src/daemon.rs"

[dependencies]
anyhow = "1.0.57"
camino = "1.0.5"
chrono = "0.4"
mysql = "21.0.2"
nix = "0.23.1"
once_cell = "1.8.0"
serde = "1.0.133"
serde_json = "1.0.74"
# Tracing is used for logging the daemon's events
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dependencies.btu_scheduler]
version = "~0.3.1"
path = "../btu_scheduler"
features = ["email"]
