# This is just the BTU Scheduler library.  No binaries defined here.
[package]
name = "btu_scheduler"
authors = ["Brian Pond <brian@datahenge.com>"]
description = "A library for integrating Frappe Framework and Redis Queue."
# documentation = "https://docs.rs/btu_scheduler/"
# homepage = "https://btu_scheduler.rs"
keywords = ["frappe", "erpnext", "queue", "scheduler"]
license = "MIT OR Apache-2.0"
# readme = "README.md"
# repository = "https://github.com/datahenge/btu_scheduler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cron = "0.9.0"
chrono = "0.4"
chrono-tz = "0.6.0"
mysql = "21.0.2"
redis = "0.21.4"
serde = { version = "1.0.130", features = ["derive"] }
syn = "1.0.83"
thiserror = "1.0.30"
toml = "0.5"
ureq = { version = "2.3.1", features = ["json"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
