# This is just the BTU Scheduler library.  No binaries defined here.

[package]
name = "btu_scheduler"
authors = ["Brian Pond <brian@datahenge.com>"]
description = "A library for integrating Frappe Framework and Redis Queue."
# documentation = "https://docs.rs/btu_scheduler/"
# homepage = "https://btu_scheduler.rs"
keywords = ["frappe", "erpnext", "queue", "scheduler"]
license = "MIT OR Apache-2.0"
# readme = "README.md"
# repository = "https://github.com/datahenge/btu_scheduler"

# NOTE: This version below will be picked up by "btu_daemon --version"
version = "0.3.6"
edition = "2021"

[features]
email = [ "lettre", "lettre_email" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.57"
camino = "1.0.5"
cron = "0.9.0"
chrono = "0.4"
chrono-tz = "0.6.0"
lettre = { version = "0.9.6", optional = true}
lettre_email = { version = "0.9.4", optional = true}
mysql = "22.1.0"
redis = "0.21.4"
regex = "1.5.5"
serde = { version = "1.0.130", features = ["derive"] }
syn = "1.0.83"
thiserror = "1.0.30"
toml = "0.5"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
ureq = { version = "2.3.1", features = ["json"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }


[package.metadata.deb]
name = "btu_scheduler"
maintainer = "Brian Pond <brian@datahenge.com>"
copyright = "2022, Brian Pond <brian@datahenge.com>"
license-file = ["../LICENSE.txt", "4"]
extended-description = """\
A set of 2 binary executables for the Background Tasks Unleashed \
project for Frappe Framework."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ["target/release/btu", "usr/bin/", "755"],
  ["target/release/btu-daemon", "usr/bin/", "755"],
]
